add contact block & media

--- a/css/main.css
+++ b/css/main.css
@@ -6,8 +6,47 @@ html, body {
 }
 
 .video-bgr {
-	height: 813px;
-	background-color: aqua;
+	height: 800px;
+	background-image: url(../images/header-bg.jpg);
+	background-repeat: no-repeat;
+	background-size: cover; 
+	display: flex;
+}
+
+.wrapper-welcom-block {
+	display: flex;
+	flex-direction: column;
+	max-width: 750px;
+	justify-content: center;
+	margin: auto;
+	text-align: center;
+	align-items: center;
+}
+
+.main-capture {
+	font-size: 60px;
+	line-height: 75px;
+	color: 
+}
+
+.play-button {
+	width: 60px;
+	height: 60px;
+	border-radius: 50%;
+	background-color: #8286a3;
+	background-image: url(../images/play-arrow.png);
+	background-repeat: no-repeat;
+	background-position: center;
+	margin: 40px 0;
+	cursor: pointer;
+}
+
+.play-button:hover {
+	background-color: #ff6d6d;
+}
+
+.extra-margin-buttom {
+	margin-bottom: 18px;
 }
 
 .bg-block-styled {
@@ -134,7 +173,6 @@ html, body {
 }
 
 .client-info {
-	min-height: 648px;
 	background-image: url(/images/bg-client-info.jpg);
 	background-repeat: repeat-y;
 }
@@ -143,7 +181,8 @@ html, body {
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
-	padding-top: 105px;
+	padding-top: 100px;
+	padding-bottom: 50px;
 }
 
 .client-about-item {
@@ -185,10 +224,11 @@ html, body {
 .sponsor-links {
 	display: flex;
 	flex-direction: row;
-}
-
-.sponsor-links-href {
-	margin: 0 50px;
+	justify-content: space-between;
+	align-items: center;
+	padding-bottom: 50px;
+	max-width: 975px;
+	margin: auto;
 }
 
 .sponsor-links-img {
@@ -199,7 +239,8 @@ html, body {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	align-items: center;	
+	align-items: center;
+	padding-top: 100px;	
 }
 
 .container-awesome-feature-info {
@@ -274,11 +315,15 @@ html, body {
 	position: relative;
 }
 
-.form-field-submit::before {
+.form-field-submit::after {
     position: absolute;
     right: 0px;
     top:40px;
     content: url(../images/arrow.png);
+}
+
+.form-field-submit:hover {
+	box-shadow: 0 0 5px rgba(0,0,0,0.3);
 }
 
 .alt-color-text-grey {
@@ -293,10 +338,8 @@ html, body {
 	display: flex;
 	padding: 90px 0;
 	background: linear-gradient(-135deg, #ff8a8a 20%,  #ffffff 0%);
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-	align-items: center;
+	padding-right: 150px;
+	max-width: 950px;
 }
 
 .contact-block-item {
@@ -304,11 +347,80 @@ html, body {
 	flex-direction: column;
 }
 
+.contact-block-item-menu>li>a {
+	text-decoration: none;
+}
+
+.contact-block-addr {
+	max-width: 225px;
+	margin-right: 70px;
+}
+
 .contact-block-item-capture {
 	color: #282828;
 	font-size: 22px;
+	margin-bottom: 10px;
 }
 
+.contact-block-item-text {
+	color: #9e9e9e;
+	font-size: 14px;
+	line-height: 26px;
+}
+
+.contact-block-input-wrap {
+	display: flex;
+	position: relative;
+}
+.contact-block-input {
+	width: 265px;
+	height: 45px;
+	padding-left: 30px;
+	color: #999cb4;
+	font-size: 16px;
+	text-transform: uppercase;
+	background-color: #f6f6f6;
+	border: 1px solid #999cb4;
+	border-radius: 1px;
+	box-sizing: border-box;
+	padding-right: 50px;
+}
+.contact-block-submit {
+	width: 50px;
+	height: 45px;
+	background-color: #ff6d6d;
+	position: absolute;
+	right: 0;
+	border: none;
+	cursor: pointer;
+	border-radius: 1px;
+	background-image: url(../images/telegram-icon.png);
+	background-repeat: no-repeat;
+	background-position: center;
+}
+
+.contact-block-submit:hover {
+	box-shadow: 0px 3px 1px rgba(0,0,0,0.3);
+}
+
+.wrapper-social-icon {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	margin-top: 15px;
+}
+
+.custom-social-icon {
+	color: #cbcbcb;
+	font-size: 24px;
+	margin: 0 15px;
+}
+
+.wrapper-menu-part-block {
+	display: flex;
+	justify-content: space-between;
+	width: 100%;
+}
 
 @media screen and (max-width: 1200px) {
 	.form-fields {
@@ -335,7 +447,9 @@ html, body {
 		display: none;
 	} 
 
-
+	.sponsor-links {
+		display: none;
+	}
 }
 	
 @media screen and (max-width: 649px) {
@@ -354,6 +468,11 @@ html, body {
 }
 	
 @media screen and (max-width: 479px) {
-
+	.form-fields {
+		width: calc(100% - 100px);
+	}
+	.form-field-input, .form-field-submit {
+		width: 100%;
+	} 
 }
 	
