--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,8 @@ html, body {
 .main-capture {
 	font-size: 60px;
 	line-height: 75px;
-	color: 
+	color: #282828;
+	font-weight: 100;
 }
 
 .play-button {
@@ -50,18 +51,18 @@ html, body {
 }
 
 .bg-block-styled {
+	min-height: 700px;
 	background:	linear-gradient(-40deg, #ff8a8a 30%,  #ececec 0%);
 }
 
 .block-about-platform {
-	min-height: 700px;
-	max-width: 570px;
 	padding: 0 150px;
 	display: flex;
 	flex-direction: column;
-	align-content: center;
-	justify-content: center;
 	background-color: #ffffff;
+	margin-right: 40%;
+	min-height: 700px;
+	justify-content: center;
 }
 
 .capture-name-block {
@@ -164,12 +165,15 @@ html, body {
 
 .designe-block-item {
 	max-width: 520px;
+	margin: 0 30px;
 }
 
 .laptop-block {
 	height: 359px;
 	width: 612px;
-	background-image: url(/images/laptop.png)
+	background-image: url(/images/laptop.png);
+	background-size: contain;
+	background-repeat: no-repeat;
 }
 
 .client-info {
@@ -241,6 +245,7 @@ html, body {
 	justify-content: center;
 	align-items: center;
 	padding-top: 100px;	
+	background-color: #f6f5f3;
 }
 
 .container-awesome-feature-info {
@@ -300,7 +305,7 @@ html, body {
 	margin-right: 30px;
 }
 
-.form-field-submit {
+.form-field-submit, .form-field-submit-start {
 	width: 260px;
 	height: 50px;
 	text-align: center;
@@ -315,14 +320,14 @@ html, body {
 	position: relative;
 }
 
-.form-field-submit::after {
+.after-arrow::after {
     position: absolute;
     right: 0px;
     top:40px;
     content: url(../images/arrow.png);
 }
 
-.form-field-submit:hover {
+.form-field-submit:hover, .form-field-submit-start:hover {
 	box-shadow: 0 0 5px rgba(0,0,0,0.3);
 }
 
@@ -334,12 +339,16 @@ html, body {
 	margin: 0;
 }
 
+.contact-block-wrapper {
+	display: flex;
+	background: linear-gradient(-135deg, #ff8a8a 20%,  #ffffff 0%);
+}
+
 .contact-block {
 	display: flex;
+	margin: auto;
+	justify-content: flex-start;
 	padding: 90px 0;
-	background: linear-gradient(-135deg, #ff8a8a 20%,  #ffffff 0%);
-	padding-right: 150px;
-	max-width: 950px;
 }
 
 .contact-block-item {
@@ -356,13 +365,13 @@ html, body {
 	margin-right: 70px;
 }
 
-.contact-block-item-capture {
+.contact-block-item-capture, .contact-block-item-capture>a {
 	color: #282828;
 	font-size: 22px;
 	margin-bottom: 10px;
 }
 
-.contact-block-item-text {
+.contact-block-item-text, .contact-block-item-text>a {
 	color: #9e9e9e;
 	font-size: 14px;
 	line-height: 26px;
@@ -414,12 +423,16 @@ html, body {
 	color: #cbcbcb;
 	font-size: 24px;
 	margin: 0 15px;
+	cursor: pointer;
 }
 
+.custom-social-icon:hover {
+	color: #ff6d6d;
+} 
 .wrapper-menu-part-block {
 	display: flex;
 	justify-content: space-between;
-	width: 100%;
+	width: 650px;
 }
 
 @media screen and (max-width: 1200px) {
@@ -430,6 +443,11 @@ html, body {
 	.form-field-input {
 		margin-right: 0;
 		margin-bottom: 15px;
+	}
+
+	.block-about-platform {
+		padding: 0 30px;
+		margin: auto;
 	}
 
 }
@@ -450,6 +468,15 @@ html, body {
 	.sponsor-links {
 		display: none;
 	}
+
+	.media-hidden {
+		display: none;
+	} 
+
+	.wrapper-menu-part-block {
+		flex-direction: column;
+	}
+
 }
 	
 @media screen and (max-width: 649px) {
@@ -463,16 +490,24 @@ html, body {
 	.wrapper-client-about {
 		flex-direction: column;
 		align-items: center;
-		margin-bottom: 30px;
 	}
-}
-	
-@media screen and (max-width: 479px) {
+
 	.form-fields {
 		width: calc(100% - 100px);
 	}
 	.form-field-input, .form-field-submit {
 		width: 100%;
 	} 
+
+	.play-button {
+		display: none;
+	}
+	.wrapper-welcom-block {
+		margin: 0 30px;
+	}
+}
+	
+@media screen and (max-width: 479px) {
+
 }
 	
