--- a/css/main.css
+++ b/css/main.css
@@ -386,6 +386,7 @@ html, body {
 	color: #9e9e9e;
 	font-size: 14px;
 	line-height: 26px;
+	text-decoration: none;
 }
 
 .contact-block-input-wrap {
