--- a/css/main.css
+++ b/css/main.css
@@ -382,6 +382,27 @@ html, body {
 	margin-bottom: 10px;
 }
 
+.logo-after {
+	position: relative;;
+}
+
+.logo-after::after {
+	position: absolute;
+	background-image: url(../images/pink-arrow.png);
+	background-repeat: no-repeat;
+	content: 'Ex';
+	color: #ffffff;
+	padding-left: 3px;
+	padding-top: 11px;
+	font-weight: bold;
+	height: 47px;
+	width: 42px;
+	top: -10px;
+}
+
+
+
+
 .contact-block-item-text, .contact-block-item-text>a {
 	color: #9e9e9e;
 	font-size: 14px;
